fix: Make headings margin compatible with the block editor, and remove unwanted margin when there is no block gap

--- a/wp-content/themes/rv-starter/assets/css/abstracts/mixins/headings.scss
+++ b/wp-content/themes/rv-starter/assets/css/abstracts/mixins/headings.scss
@@ -2,11 +2,6 @@
  * Headings global style.
 */
 @mixin heading($h: 1) {
-	margin-block-start: 0.5em !important; // override block editor styles, if gap in theme.json is "true"
-	margin-block-end: 0.5em !important; // override block editor styles, if gap in theme.json is "true"
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-
 	@if $h == 1 {
 		font-family: $heading-1-font-family;
 		font-weight: $heading-1-font-weight;
